--- a/PersonelTakipOtomasyonu/PersonelTakipOtomasyonu/App.config
+++ b/PersonelTakipOtomasyonu/PersonelTakipOtomasyonu/App.config
@@ -1,6 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <connectionStrings>
+    <add name="personelTakipOtomasyonuEntities" connectionString="metadata=res://*/Entity.Model1.csdl|res://*/Entity.Model1.ssdl|res://*/Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ERP;initial catalog=personelTakipOtomasyonu;persist security info=True;user id=cogurcu;password=deneme;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="personelTakipOtomasyonuEntities1" connectionString="metadata=res://*/Entity.Model1.csdl|res://*/Entity.Model1.ssdl|res://*/Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ERP;initial catalog=personelTakipOtomasyonu;persist security info=True;user id=cogurcu;password=deneme;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="personelTakipOtomasyonuEntities2" connectionString="metadata=res://*/Entity.Model1.csdl|res://*/Entity.Model1.ssdl|res://*/Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ERP;initial catalog=personelTakipOtomasyonu;persist security info=True;user id=cogurcu;password=deneme;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
